# openenv-dcdc-rl

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  openenv.yaml  plan.md  pyproject.toml  requirements.txt  test_ltspice.py  test_pipeline.py  test_pyspice_buck.py
server/: __init__.py  app.py  components.py  environment.py  guidance.py  models.py  reward.py  simulator.py  tasks.py
templates/: boost_ac.net  boost_tran.net  buck_ac.net  buck_tran.db  buck_tran.net  multiphase_buck_ac.net  multiphase_buck_tran.net  my_own_buck_converter.asc
templates/models/: cmos_180nm.lib  components.lib
templates/models/CoilcraftLTAdvLib/: 016008C.lib  0201AF.lib  0201DS.lib  0201HL.lib  026011C.lib  026011F.lib  0302CS.lib  0402AF.lib  0402CS.lib  0402CT.lib  0402DC.lib  0402DF.lib  0402FL.lib  0402HL.lib  0402HP.lib  0402PA.lib  0403HQ.lib  0603AF.lib  0603CS.lib  0603CT.lib  0603DC.lib  0603HC.lib  0603HL.lib  0603HP.lib  0603LS.lib  0603PS.lib  0604HQ.lib  0805AF.lib  0805CS.lib  0805HP.lib  0805HQ.lib  0805HS.lib  0805HT.lib  0805LS.lib  0805PS.lib  0806SQ.lib  0807SQ.lib  0906.lib  0908SQ.lib  1008AF.lib  (+209 more)
templates/models/CoilcraftLTAdvLib/Coilcraft/AirCore_Inductors/: 0806SQ.asy  0807SQ.asy  0906.asy  0908SQ.asy  1010VS.asy  1111SQ.asy  1212VS.asy  132-xxSM.asy  1508.asy  1512SP.asy  1515SQ.asy  1606.asy  1812SMS.asy  2014VS.asy  2222SQ.asy  2508.asy  2712SP.asy  2929SQ.asy  AxxT.asy  BxxT.asy  GA309x.asy  NA593x.asy  WA309X.asy
templates/models/CoilcraftLTAdvLib/Coilcraft/Power_Inductors/: 0402AF.asy  0402DF.asy  (+181 more)
(+1924 files in other folders)
